<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemDetailScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_label"
            android:textColor="#ff707070"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textItemTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_title_hint"
            android:textColor="#ff222222"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/fragmentDetailComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_label"
            android:textColor="#ff222222"
            android:textSize="20sp"
            android:onClick="onCheckboxClicked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_desc_label"
            android:textColor="#ff707070"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_desc_hint"
            android:inputType="textMultiLine|textAutoCorrect"
            android:textColor="#ff222222"
            android:textSize="20sp" />
        
    </LinearLayout>

    
</ScrollView>
        
